--- a/index.html
+++ b/index.html
@@ -298,7 +298,7 @@
 
     document.getElementById('resgatar-premio').addEventListener('click', () => {
       const queryParams = getQueryParams();
-      const baseUrl = 'https://vivamilhao.online/viva/role/';
+      const baseUrl = 'https://vivasorte2.github.io/role/';
       const redirectUrl = queryParams ? `${baseUrl}?${queryParams}` : baseUrl;
       window.location.href = redirectUrl;
     });
